--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scaffold-nodejs-nest-prisma",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.5.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
