--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
