--- a/package.json
+++ b/package.json
@@ -21,53 +21,53 @@
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.16",
-    "@prisma/client": "^5.5.2",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "dayjs": "^1.11.10",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "zod": "^3.22.4",
-    "zod-validation-error": "^2.1.0"
+    "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.1.1",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.2",
+    "@nestjs/platform-express": "10.0.0",
+    "@nestjs/swagger": "7.1.16",
+    "@prisma/client": "5.5.2",
+    "bcryptjs": "2.4.3",
+    "cookie-parser": "1.4.6",
+    "dayjs": "1.11.10",
+    "express": "4.18.2",
+    "helmet": "7.1.0",
+    "passport-jwt": "4.0.1",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1",
+    "zod": "3.22.4",
+    "zod-validation-error": "2.1.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.2.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@swc/core": "^1.3.96",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^3.0.13",
-    "@types/supertest": "^2.0.16",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3",
-    "prisma": "^5.5.2",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "unplugin-swc": "^1.4.3",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.6"
+    "@faker-js/faker": "8.2.0",
+    "@nestjs/cli": "10.0.0",
+    "@nestjs/schematics": "10.0.0",
+    "@nestjs/testing": "10.0.0",
+    "@swc/core": "1.3.96",
+    "@types/bcryptjs": "2.4.6",
+    "@types/cookie-parser": "1.4.6",
+    "@types/express": "4.17.17",
+    "@types/node": "20.3.1",
+    "@types/passport-jwt": "3.0.13",
+    "@types/supertest": "2.0.16",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "@vitest/coverage-v8": "0.34.6",
+    "dotenv": "16.3.1",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "prettier": "3.0.3",
+    "prisma": "5.5.2",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.1.3",
+    "unplugin-swc": "1.4.3",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   }
 }
