fix: add prisma migrate in ci

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -38,4 +38,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - run: pnpm prisma migrate dev
+
       - run: pnpm run test
